--- a/Assignments/Theoretical/theoretical2.ipynb
+++ b/Assignments/Theoretical/theoretical2.ipynb
@@ -149,6 +149,7 @@
     "    w1, w2 = weights\n",
     "\n",
     "    return 1/(1+np.exp(-(bias + x1*w1 + x2*w2)))\n",
+    "    return 1 / (1 + np.exp(-(bias + np.dot(x, weights))))\n",
     "    # STUDENT CODE ENDS"
    ]
   },
